welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:11: error: Missing closing brace `}' assumed here
def g():Boolean={
^ZigZag:22: error: expected start of definition
override def run() {
         ^